--- a/Welcome.html
+++ b/Welcome.html
@@ -13,7 +13,7 @@
 <body onload="userWelcoming()">
     <header class="header-box">
         <div class="container d-flex justify-content-between py-2">
-            <a href="Sign in.html" class="Logo-link">Smart Loginnn</a>
+            <a href="Sign in.html" class="Logo-link">Smart Login</a>
             <a href="Sign in.html" class="btn btn-outline-info logOut" onclick="logOut()">Log out</a>
         </div>
     </header>
